fix: Image size too small when create post

--- a/src/modules/posts/components/post/PostPopup.module.scss
+++ b/src/modules/posts/components/post/PostPopup.module.scss
@@ -17,7 +17,8 @@
   display: flex;
   align-items: center;
   gap: 12px;
-  width: 1096px;
+  max-width: 1296px;
+  width: 100%;
   padding: 0 48px;
   z-index: 10;
 
