--- a/src/modules/posts/components/post/informationForPost/InformationForPost.module.scss
+++ b/src/modules/posts/components/post/informationForPost/InformationForPost.module.scss
@@ -4,8 +4,9 @@
   position: relative;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  width: 1000px;
-  height: 500px;
+  max-width: 1200px;
+  width: 100%;
+  height: 600px;
   background: $dark_300;
 
   .editPanel {
