--- a/src/modules/posts/components/post/informationForPost/gallery/Gallery.module.scss
+++ b/src/modules/posts/components/post/informationForPost/gallery/Gallery.module.scss
@@ -6,7 +6,8 @@
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
-    max-width: 500px;
+    max-width: 100%;
+    max-height: 100%;
     transition: 0.3s;
   }
 
